# eye-ai-backend

./: app.py  main.py  requirements.txt  runtime.txt  server.js
auth/: package-lock.json  package.json  server.js
flask/: app.py  pyproject.toml  requirements.txt
instance/: eye_ai.db
model/: model_301.pth
src/: .env  __init__.py  auth.py  auth_routes.py  model_runtime.py  models.py  prediction_routes.py
